<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mlab.phoneinfo.MainActivity">

    <Button
        android:id="@+id/id_btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/buttonBack"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/id_showTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="20sp" />

    <Button
        android:id="@+id/id_btn_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button01"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="说明：\n可将手机设为飞行模式或改变网络类型进行对比查看" />

</LinearLayout>
